// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<APIView/> render() should render a Create API Key Button 1`] = `
<div
  className="full-width"
>
  <PageHeader
    title="REST API"
  />
  <Container
    className="pageContainer"
    fluid={true}
    tag="div"
  >
    <div
      className="contentWrapper"
    >
      <div
        className="body-regular mb32"
      >
        <p>
          Gorgias prides itself on being a developer-friendly helpdesk. We expose a
           
          <a
            href="https://stackoverflow.com/questions/671118/what-exactly-is-restful-programming"
            rel="noopener noreferrer"
            target="_blank"
          >
            RESTful API
          </a>
           
          to make it easy for you to get, create, update and delete many objects including customers, tickets, messages and events. To find out more about our API, please consult our docs here:
          <a
            href="https://developers.gorgias.com/"
            rel="noopener noreferrer"
            target="_blank"
          >
             
            https://developers.gorgias.com/
          </a>
          .
        </p>
        <p>
          Below are the parameters you will need to access our API. We're using
           
          <a
            href="https://en.wikipedia.org/wiki/Basic_access_authentication"
            rel="noopener noreferrer"
          >
            HTTP basic authentication
          </a>
           
          to authenticate API requests.
        </p>
      </div>
      <div
        className="heading-section-semibold mb16"
      >
        API Access & Credentials
      </div>
      <FormGroup
        className="inputField"
        tag="div"
      >
        <Label
          className="control-label"
          for="URL"
          tag="label"
          widths={
            Array [
              "xs",
              "sm",
              "md",
              "lg",
              "xl",
            ]
          }
        >
          Base API URL
        </Label>
        <InputGroup
          tag="div"
        >
          <Input
            id="url"
            readOnly={true}
            type="text"
            value="https://justatest.gorgias.com/api/"
          />
          <InputGroupAddon
            addonType="append"
            tag="div"
          >
            <Button
              className="copyBtn"
              color="secondary"
              data-clipboard-target="#url"
              tag="button"
            >
              <i
                className="material-icons mr-2"
              >
                file_copy
              </i>
              Copy
            </Button>
          </InputGroupAddon>
        </InputGroup>
      </FormGroup>
      <FormGroup
        className="inputField"
        tag="div"
      >
        <Label
          className="control-label"
          for="email"
          tag="label"
          widths={
            Array [
              "xs",
              "sm",
              "md",
              "lg",
              "xl",
            ]
          }
        >
          Username (your email address)
        </Label>
        <InputGroup
          tag="div"
        >
          <Input
            id="email"
            readOnly={true}
            type="text"
          />
          <InputGroupAddon
            addonType="append"
            tag="div"
          >
            <Button
              className="copyBtn"
              color="secondary"
              data-clipboard-target="#email"
              tag="button"
            >
              <i
                className="material-icons mr-2"
              >
                file_copy
              </i>
              Copy
            </Button>
          </InputGroupAddon>
        </InputGroup>
      </FormGroup>
      <FormGroup
        className="inputField mb32"
        tag="div"
      >
        <Label
          className="control-label"
          for="apiKey"
          tag="label"
          widths={
            Array [
              "xs",
              "sm",
              "md",
              "lg",
              "xl",
            ]
          }
        >
          Password (API Key)
        </Label>
        <div>
          <p
            className="body-regular mb24"
          >
            You can create an API Key using the button below.
          </p>
          <ForwardRef
            onClick={[Function]}
          >
            Create API key
          </ForwardRef>
        </div>
      </FormGroup>
      <div
        className="heading-subsection-semibold mb8"
      >
        Postman collection
      </div>
      <div
        className="body-regular mb24"
      >
        <p>
          You can also import our
           
          <a
            href="https://www.getpostman.com/"
            rel="noopener noreferrer"
            target="_blank"
          >
            Postman
          </a>
           
          collection below to quickly connect and use our REST API.
        </p>
      </div>
      <div
        className="postman-run-button mb32"
        data-postman-action="collection/import"
        data-postman-collection-url="entityId=15687974-2ca60778-1282-4a00-9d6a-8e90213b8248&entityType=collection&workspaceId=b6894a63-39b4-496f-acdc-db697172e169"
        data-postman-param="env%5BGorgias%20Helpdesk%5D=W3siZW5hYmxlZCI6dHJ1ZSwia2V5IjoiZG9tYWluIiwidmFsdWUiOiJqdXN0YXRlc3QiLCJ0eXBlIjoidGV4dCJ9LHsiZW5hYmxlZCI6dHJ1ZSwia2V5IjoiZW1haWwiLCJ0eXBlIjoidGV4dCJ9LHsiZW5hYmxlZCI6dHJ1ZSwia2V5IjoiYXBpX2tleSIsInR5cGUiOiJ0ZXh0In1d"
        data-postman-var-1="15687974-2ca60778-1282-4a00-9d6a-8e90213b8248"
      />
      <div
        className="heading-subsection-semibold mb8"
      >
        Developer newsletter
      </div>
      <div
        className="body-regular mb24"
      >
        <p>
          If you're using our API, we highly encourage you to subscribe to our developer newsletter. It contains updates about
           
          <b>
            upcoming changes and breaking changes to the API
          </b>
          , new features and integrations.
        </p>
      </div>
      <ForwardRef
        onClick={[Function]}
      >
        Subscribe
      </ForwardRef>
    </div>
  </Container>
</div>
`;

exports[`<APIView/> render() should render a Reset Button 1`] = `
<div
  className="full-width"
>
  <PageHeader
    title="REST API"
  />
  <Container
    className="pageContainer"
    fluid={true}
    tag="div"
  >
    <div
      className="contentWrapper"
    >
      <div
        className="body-regular mb32"
      >
        <p>
          Gorgias prides itself on being a developer-friendly helpdesk. We expose a
           
          <a
            href="https://stackoverflow.com/questions/671118/what-exactly-is-restful-programming"
            rel="noopener noreferrer"
            target="_blank"
          >
            RESTful API
          </a>
           
          to make it easy for you to get, create, update and delete many objects including customers, tickets, messages and events. To find out more about our API, please consult our docs here:
          <a
            href="https://developers.gorgias.com/"
            rel="noopener noreferrer"
            target="_blank"
          >
             
            https://developers.gorgias.com/
          </a>
          .
        </p>
        <p>
          Below are the parameters you will need to access our API. We're using
           
          <a
            href="https://en.wikipedia.org/wiki/Basic_access_authentication"
            rel="noopener noreferrer"
          >
            HTTP basic authentication
          </a>
           
          to authenticate API requests.
        </p>
      </div>
      <div
        className="heading-section-semibold mb16"
      >
        API Access & Credentials
      </div>
      <FormGroup
        className="inputField"
        tag="div"
      >
        <Label
          className="control-label"
          for="URL"
          tag="label"
          widths={
            Array [
              "xs",
              "sm",
              "md",
              "lg",
              "xl",
            ]
          }
        >
          Base API URL
        </Label>
        <InputGroup
          tag="div"
        >
          <Input
            id="url"
            readOnly={true}
            type="text"
            value="https://justatest.gorgias.com/api/"
          />
          <InputGroupAddon
            addonType="append"
            tag="div"
          >
            <Button
              className="copyBtn"
              color="secondary"
              data-clipboard-target="#url"
              tag="button"
            >
              <i
                className="material-icons mr-2"
              >
                file_copy
              </i>
              Copy
            </Button>
          </InputGroupAddon>
        </InputGroup>
      </FormGroup>
      <FormGroup
        className="inputField"
        tag="div"
      >
        <Label
          className="control-label"
          for="email"
          tag="label"
          widths={
            Array [
              "xs",
              "sm",
              "md",
              "lg",
              "xl",
            ]
          }
        >
          Username (your email address)
        </Label>
        <InputGroup
          tag="div"
        >
          <Input
            id="email"
            readOnly={true}
            type="text"
          />
          <InputGroupAddon
            addonType="append"
            tag="div"
          >
            <Button
              className="copyBtn"
              color="secondary"
              data-clipboard-target="#email"
              tag="button"
            >
              <i
                className="material-icons mr-2"
              >
                file_copy
              </i>
              Copy
            </Button>
          </InputGroupAddon>
        </InputGroup>
      </FormGroup>
      <FormGroup
        className="inputField mb32"
        tag="div"
      >
        <Label
          className="control-label"
          for="apiKey"
          tag="label"
          widths={
            Array [
              "xs",
              "sm",
              "md",
              "lg",
              "xl",
            ]
          }
        >
          Password (API Key)
        </Label>
        <InputGroup
          tag="div"
        >
          <Input
            id="apiKey"
            readOnly={true}
            type="text"
            value="4a75a69bb409c2cd4041df29f5791103acaf0991bf0d0b3fa022951830482510"
          />
          <InputGroupAddon
            addonType="append"
            tag="div"
          >
            <Button
              className="resetBtn"
              color="danger"
              onClick={[Function]}
              tag="button"
            >
              <i
                className="material-icons mr-2"
              >
                refresh
              </i>
              Reset
            </Button>
            <Button
              className="copyBtn"
              color="secondary"
              data-clipboard-target="#apiKey"
              tag="button"
            >
              <i
                className="material-icons mr-2"
              >
                file_copy
              </i>
              Copy
            </Button>
          </InputGroupAddon>
        </InputGroup>
      </FormGroup>
      <div
        className="heading-subsection-semibold mb8"
      >
        Postman collection
      </div>
      <div
        className="body-regular mb24"
      >
        <p>
          You can also import our
           
          <a
            href="https://www.getpostman.com/"
            rel="noopener noreferrer"
            target="_blank"
          >
            Postman
          </a>
           
          collection below to quickly connect and use our REST API.
        </p>
      </div>
      <div
        className="postman-run-button mb32"
        data-postman-action="collection/import"
        data-postman-collection-url="entityId=15687974-2ca60778-1282-4a00-9d6a-8e90213b8248&entityType=collection&workspaceId=b6894a63-39b4-496f-acdc-db697172e169"
        data-postman-param="env%5BGorgias%20Helpdesk%5D=W3siZW5hYmxlZCI6dHJ1ZSwia2V5IjoiZG9tYWluIiwidmFsdWUiOiJqdXN0YXRlc3QiLCJ0eXBlIjoidGV4dCJ9LHsiZW5hYmxlZCI6dHJ1ZSwia2V5IjoiZW1haWwiLCJ0eXBlIjoidGV4dCJ9LHsiZW5hYmxlZCI6dHJ1ZSwia2V5IjoiYXBpX2tleSIsInZhbHVlIjoiNGE3NWE2OWJiNDA5YzJjZDQwNDFkZjI5ZjU3OTExMDNhY2FmMDk5MWJmMGQwYjNmYTAyMjk1MTgzMDQ4MjUxMCIsInR5cGUiOiJ0ZXh0In1d"
        data-postman-var-1="15687974-2ca60778-1282-4a00-9d6a-8e90213b8248"
      />
      <div
        className="heading-subsection-semibold mb8"
      >
        Developer newsletter
      </div>
      <div
        className="body-regular mb24"
      >
        <p>
          If you're using our API, we highly encourage you to subscribe to our developer newsletter. It contains updates about
           
          <b>
            upcoming changes and breaking changes to the API
          </b>
          , new features and integrations.
        </p>
      </div>
      <ForwardRef
        onClick={[Function]}
      >
        Subscribe
      </ForwardRef>
    </div>
  </Container>
</div>
`;
